--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,8 @@
 <footer id="footer">
-    <p class="small">© Copyright {{ site.time | date: '%Y' }} {{ site.author }}</p>
+    <div class="copyright">
+      <p class="small">© Copyright {{ site.time | date: '%Y' }} {{ site.author }}</p>
+    </div>
+    <div class="icons">
+      <a class="twitter" href="https://twitter.com/mikesandt"><span class="icon-twitter"></span></a>
+    </div>
 </footer>
