remove sharing links for now

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ archive: true
     </a>
 
     <section id="sharing">
-        {% include share.html %}
+        <!-- {% include share.html %} -->
     </section>
 </footer>
 
